# Rand-num-picker

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Random_picker.cpp  Random_picker.h  Random_picker.ui  Settings_window.cpp  Settings_window.h  Settings_window.ui  cmake_install.cmake  main.cpp
